--- a/src/assets/css/common.scss
+++ b/src/assets/css/common.scss
@@ -11,6 +11,59 @@ body {
   font-size: 1rem;
 }
 
+.select-year {
+
+  .all,
+  .city {
+    padding: 0 1rem;
+    color: #fff;
+    font-weight: bold;
+  }
+
+  .line {
+    margin: 0 0.5rem;
+    width: 0.625rem;
+    height: 0.125rem;
+    background: #fff;
+  }
+
+  .line-y {
+    margin: 0 0.5rem;
+    width: 0.125rem;
+    height: 1rem;
+    background: #fff;
+  }
+
+  .ant-picker {
+    border: 0;
+
+    .ant-picker-active-bar {
+      width: 5.1rem !important;
+      margin-left: 1rem;
+    }
+
+    .ant-picker-input>input {
+      width: 6rem;
+      text-align: center;
+    }
+
+    .ant-picker-input>input,
+    .ant-picker-suffix,
+    .ant-picker-separator {
+      font-size: 1rem;
+      font-weight: bold;
+      color: #fff;
+    }
+  }
+}
+
+.progress-bar {
+  width: 100%;
+  width: 9rem;
+  height: 1.5rem;
+  border-radius: 0.25rem;
+  border: 1px solid #0073dd;
+}
 
 // header样式
 .header-box {
