--- a/src/views/forestry/style.scss
+++ b/src/views/forestry/style.scss
@@ -36,29 +36,6 @@
         &.info {
           height: 2rem;
 
-          .all,
-          .city {
-            padding: 0 1rem;
-            margin-right: 1rem;
-            color: #fff;
-            font-weight: bold;
-          }
-
-          .line {
-            margin: 0 0.5rem;
-            width: 0.625rem;
-            height: 0.125rem;
-            background: #fff;
-          }
-
-          .line-y {
-            margin: 0 0.5rem;
-            width: 0.125rem;
-            height: 1rem;
-            background: #fff;
-          }
-
-          // /deep/
           .ivu-input-wrapper {
             .ivu-input {
               width: 6.875rem;
@@ -510,6 +487,11 @@
                 opacity: 1;
                 visibility: visible;
 
+                .more {
+                  top: 90%;
+                  right: 5rem;
+                }
+
                 &.active-map {
                   .name {
                     font-size: 1.5rem !important;
@@ -765,6 +747,14 @@
               }
             }
 
+            #maxMap {
+              top: 3rem;
+              left: 0;
+              width: 30.5rem;
+              height: 24rem;
+              background-repeat: round;
+            }
+
             .map-name {
               position: absolute;
               bottom: 0;
@@ -881,12 +871,12 @@
       background-position: left center;
     }
 
-    :deep(.ivu-tooltip-arrow) {
+    .ivu-tooltip-arrow {
       border-width: 0;
       // border-bottom-color: rgba(51, 51, 51, 0.8);
     }
 
-    :deep(.ivu-tooltip-inner) {
+    .ivu-tooltip-inner {
       background-color: rgba(51, 51, 51, 0.8);
       border-radius: 8px;
       border: 1px solid #0073dd;
