--- a/src/views/forestry/style.scss
+++ b/src/views/forestry/style.scss
@@ -210,9 +210,9 @@
               user-select: none;
 
               .down {
-                font-size: 16px;
-                width: 24px;
-                height: 24px;
+                font-size: 0.8rem;
+                width: 1.5rem;
+                height: 1.5rem;
                 display: flex;
                 align-items: center;
                 justify-content: center;
