--- a/src/assets/css/common.scss
+++ b/src/assets/css/common.scss
@@ -65,6 +65,11 @@ body {
   border: 1px solid #0073dd;
 }
 
+.circinate {
+  width: 7.9375rem;
+  height: 7.9375rem;
+}
+
 // header样式
 .header-box {
   height: 4.875rem;
@@ -79,5 +84,3 @@ body {
     margin-right: .625rem;
   }
 }
-
-.content-box {}
