--- a/src/assets/css/basic.scss
+++ b/src/assets/css/basic.scss
@@ -8,14 +8,21 @@ body {
     'Helvetica Neue', STHeiti, 'Microsoft Yahei', Tahoma, Simsun, sans-serif;
   overflow-y: auto;
 }
+
 body,
 html {
   height: 100%;
 }
-ul,
-li {
-  list-style-type: none;
+
+ul {
+  margin: 0;
+  padding: 0;
+
+  li {
+    list-style-type: none;
+  }
 }
+
 
 a {
   text-decoration: none;
@@ -93,9 +100,23 @@ input[type='textarea'] {
   cursor: pointer;
 }
 
+.ivu-select-selection .ivu-select-placeholder {
+  color: #a2b0c4;
+}
+
+/*滚动条*/
+::-webkit-scrollbar {
+  width: 4px;
+  height: 4px;
+}
+
+::-webkit-scrollbar-track {
+  background-color: #002582;
+}
+
 ::-webkit-scrollbar-thumb {
-  border-radius: 2px;
-  background: #436eaa;
+  background: #0075ff;
+  border-radius: 4px;
 }
 
 .cent {
