--- a/src/assets/css/basic.scss
+++ b/src/assets/css/basic.scss
@@ -1,4 +1,6 @@
-* {
+*,
+p,
+ul {
   margin: 0;
   padding: 0;
 }
@@ -15,9 +17,6 @@ html {
 }
 
 ul {
-  margin: 0;
-  padding: 0;
-
   li {
     list-style-type: none;
   }
